--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -5,7 +5,7 @@ layout: default
     <h1>{{ page.title }}</h1>
     <div class="entry">
         <img src = {{ page.image }} alt = {{ page.title}}>
-        <a href = {{ page.download }}>Download rwp</a> <a href = {{ page.steam }}>Steam Workshop</a>
+        <b><a href = {{ page.download }}>Download rwp</a>    <a href = {{ page.steam }}>Steam Workshop</a></b>
         {{ content }}
     </div>
 </article>
