Fixed my shoddy html

--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -5,12 +5,13 @@ layout: default
     <h1>{{ page.title }}</h1>
     <div class="entry">
         <img src = {{ page.image }} alt = {{ page.title}}>
-        <b><a href = {{ page.download }}>Download rwp</a>    <a href = {{ page.steam }}>Steam Workshop</a></b>
+        <b><a href = {{ page.download }}>Download rwp</a> </b><br> 
+        <b><a href = {{ page.steam }}>Steam Workshop</a></b> <br>
         
-        <b>Traction:</b> {{page.traction}}
-        <b>Route:</b> {{page.route}}
-        <b>Duration:</b> {{page.duration}}
-        <b>Difficulty:</b> {{page.difficulty}}
+        <b>Traction:</b> {{page.traction}} <br>
+        <b>Route:</b> {{page.route}} <br>
+        <b>Duration:</b> {{page.duration}} <br>
+        <b>Difficulty:</b> {{page.difficulty}} <br>
         
         {{ content }}
     </div>
