Added a cheeky back button

--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -12,5 +12,7 @@ layout: default
         <b>Difficulty:</b> {{page.difficulty}} <br>
         
         {{ content }}
+        
+        <a href = "http://www.georgejkaye.com/trains">Back</a>
     </div>
 </article>
