Starting to get the hang of jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,14 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/trains">Trains</a>
           </nav>
         </header>
       </div>
     </div>
-
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
