Changed how scenario tocs are displayed

--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -7,6 +7,7 @@ layout: default
         <img src = {{ page.image }} alt = {{ page.title}}>
 
         <b>Traction:</b> {{page.traction}} <br>
+        <b>TOC:</b> {{page.toc}} <br>
         <b>Route:</b> {{page.route}} <br>
         <b>Duration:</b> {{page.duration}} <br>
         <b>Difficulty:</b> {{page.difficulty}} <br>
