--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -4,7 +4,7 @@ layout: default
 <article class="page">
     <h1>{{ page.title }}</h1>
     <div class="entry">
-        <img src = {{ page.image }} alt = {{ page.title}}>
+        <img src = {{ page.image }} alt = {{ page.alttext }}>
 
         <b>Traction:</b> {{page.traction}} <br>
         <b>TOC:</b> {{page.toc}} <br>
