--- a/style.scss
+++ b/style.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 
   line-height: 1.7;
-  margin: 1em 0 15px;
+  margin: 1em 0 5px;
   padding: 0;
 
   @include mobile {
@@ -258,7 +258,7 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
+    margin: 0em 0em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
