--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,4 +48,8 @@
 
     {% include analytics.html %}
   </body>
+
+  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src = "/js/scripts.js"</script>
+
 </html>
