--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,4 +6,6 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src = "/js/scripts.js"</script>
 </article>
