--- a/style.scss
+++ b/style.scss
@@ -32,15 +32,16 @@ body {
   img {
     border-radius: 5px;
     margin-bottom: 10px;
-    margin-top: -10px;
+    margin-top: 0px;
   }
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
-
+    font-family: $helveticaNeue;
+    color: $darkerGray;
+    font-weight: bold;
+    margin-bottom: -10px;
+    
   line-height: 1.7;
   padding: 0;
 
