--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,5 +7,5 @@ layout: default
     {{ content }}
   </div>
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src = "/js/scripts.js"</script>
+  <script src = "/js/scripts.js"></script></script>
 </article>
