--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="page">
-  <h1>{{ page.title }}</h1>
+  <h1 id = "title">{{ page.title }}</h1>
   <div class="entry">
     {{ content }}
   </div>
