--- a/style.scss
+++ b/style.scss
@@ -28,11 +28,9 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-    
+
   img {
     border-radius: 5px;
-    margin-bottom: 10px;
-    margin-top: 0px;
   }
 }
 
@@ -41,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
     color: $darkerGray;
     font-weight: bold;
     margin-bottom: -10px;
-    
+
   line-height: 1.7;
   padding: 0;
 
@@ -276,6 +274,15 @@ nav {
     text-transform: uppercase;
     font-size: 15px;
   }
+}
+
+.thumb {
+
+    max-width: 24%;
+
+    @include mobile {
+        max-width: 49%;
+    }
 }
 
 .wrapper-footer {
