Updated scenario page with a better interface

--- a/style.scss
+++ b/style.scss
@@ -296,6 +296,14 @@ nav {
   }
 }
 
+.small-scenario{
+    max-width: 49%;
+
+    @include mobile {
+      max-width: 99%;
+    }
+}
+
 .thumb {
 
     max-width: 24%;
