--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 ---
-<article class="page">
-  <h1 id = "title">{{ page.title }}</h1>
-  <div class="entry">
-    {{ content }}
-  </div>
-  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src = "/js/scripts.js"></script></script>
-</article>
+
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
+</div>
+<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src = "/js/scripts.js"></script></script>
