--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img src="{{ site.author.avatar }}" alt="me" width = "100px" height = "100px">
       <h1>
         <a href="{{ "/" | relative_url }}">
           {{ site.title }}
