--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -433,6 +433,6 @@ a.pagination-item:hover {
   width: 100%;
 }
 
-@media only screen and (min-width: 768px) {
+/*@media only screen and (min-width: 768px) {
   .small-scenario{width: 48%;}
-}
+}*/
