Fixed 'top' links not working

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ "/public/css/hyde.css" | relative_url }}">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/public/apple-touch-icon-144-precomposed.png" | relative_url }}">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/public/profile.png" | relative_url }}">
                                  <link rel="shortcut icon" href="{{ "/public/favicon.ico/" | relative_url }}">
 
   <!-- RSS -->
