--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include sidebar.html %}
 
-    <div class="content container">
+    <div id="top" class="content container">
       {{ content }}
     </div>
 
