--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="page">
+<article id="top" class="page">
     <h1>{{ page.title }}</h1>
     <div class="entry">
         <img src = {{ page.image }} alt = {{ page.alttext }}>
