--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -228,6 +228,7 @@ img {
   /*display: block;*/
   max-width: 100%;
   border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 /* Tables */
@@ -326,7 +327,7 @@ tbody tr:nth-child(odd) th {
 
 .page,
 .post {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 /* Blog post or page title */
