--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -228,11 +228,15 @@ img {
   /*display: block;*/
   max-width: 100%;
   border-radius: 5px;
-  margin-bottom: 5px;
 }
 
 .post-img {
   width: 100%;
+}
+
+.poster-img {
+  width: 100%;
+  margin-bottom: -5px;
 }
 
 /* Tables */
