--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/public/profile.png" | relative_url }}">
-                                 <link rel="shortcut icon" href="{{ "/public/favicon.ico/" | relative_url }}">
+                                 <link rel="shortcut icon" href="{{ "/favicon.ico/" | relative_url }}">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
