--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,7 @@
   <link rel="stylesheet" href="{{ "/public/css/hyde.css" | relative_url }}">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/public/profile.png" | relative_url }}">
-                                 <link rel="shortcut icon" href="{{ "/favicon.ico/" | relative_url }}">
+  <link rel="icon" href="{{ site.baseurl }}favicon.png" type="image/png" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
