More messing around with favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ "/public/css/hyde.css" | relative_url }}">
 
   <!-- Icons -->
-  <link rel="icon" href="{{ site.baseurl }}favicon.png" type="image/png" />
+  <link rel="icon" href="{{ site.baseurl }}/favicon.png" type="image/png" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
