--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -4,14 +4,14 @@ layout: default
 <article id="top" class="page">
     <h1>{{ page.title }}</h1>
     <div class="entry">
-        <img src = {{ page.image }} alt = {{ page.alttext }}>
+        <p><img src = {{ page.image }} alt = {{ page.alttext }}></p>
 
         <b>Traction:</b> {{page.traction}} <br>
         <b>TOC:</b> {{page.toc}} <br>
         <b>Route:</b> {{page.route}} <br>
         <b>Duration:</b> {{page.duration}} <br>
-        <b>Difficulty:</b> {{page.difficulty}} <br>
-
+        <p><b>Difficulty:</b> {{page.difficulty}}</p>
+        
         {{ content }}
     </div>
 </article>
