--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -244,13 +244,18 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #bcc0c6;
   border-collapse: collapse;
 }
-td,
-th {
+td
+{
   padding: .25rem .5rem;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #bcc0c6;
+}
+th{
+  padding: .25rem .5rem;
+  background-color: #919191;
+  color: white;
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
