--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -257,9 +257,8 @@ th{
   background-color: #919191;
   color: white;
 }
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+tbody tr:nth-child(even) td {
+  background-color: #ecebeb;
 }
 
 
