--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
 
-  <img class = "post-img" src = {{ page.image }} alt= {{ page.alttext }}>
+  <p><img class = "post-img" src = {{ page.image }} alt= {{ page.alttext }}></p>
 
   {{ content }}
 </div>
