--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,24 +11,22 @@
     </div>
 
     <nav class="sidebar-nav">
+
+      {% if page.url == "/" | relative_url %}
+      <a class="sidebar-nav-item{% if page.url == '/'' | relative_url %} active{% endif %}" href="{{ site.basurl }}#top">Home</a>
+      <a class="sidebar-nav-item{% if page.url == '{{ site-basurl }}#about-me' %} active {% endif %}" href="{{ site.basurl }}#about-me">About {{ page.url }}</a>
+      <a class="sidebar-nav-item" href="{{ site.basurl }}#projects">Projects</a>
+      <a class="sidebar-nav-item" href="{{ site.basurl }}#talks">Talks</a>
+      <a class="sidebar-nav-item" href="{{ site.basurl }}#misc">Misc</a>
+      {% else %}
       <a class="sidebar-nav-item{% if page.url == "/" | relative_url %} active{% endif %}" href="{{ "/" | relative_url }}">Home</a>
-
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
+      <a class="sidebar-nav-item{% if page.type == 'about' %} active {% endif %}" href="{{ site.basurl }}/#about-me">About</a>
+      <a class="sidebar-nav-item{% if page.type == 'projects' %} active {% endif %}" href="{{ site.basurl }}/#projects">Projects</a>
+      <a class="sidebar-nav-item{% if page.type == 'talks' %} active {% endif %}" href="{{ site.basurl }}/#talks">Talks</a>
+      <a class="sidebar-nav-item{% if page.type == 'misc' %} active {% endif %}" href="{{ site.basurl }}/#misc">Misc</a>
+      {% endif %}
 
       <a class="sidebar-nav-item" href="{{ site.github }}">GitHub</a>
-      <a class="sidebar-nav-item{% if page.url == /misc/ | {{ relative_url }}/misc/%} active{% endif %}" href="{{ site.basurl }}/misc/">Misc</a>
       <span class="sidebar-nav-item">Running <a href="http://hyde.getpoole.com/">Hyde</a>, a Jekyll theme</span>
     </nav>
 
