Fixed a rogue slash

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
 
       {% if page.url == "/" | relative_url %}
       <a class="sidebar-nav-item{% if page.url == '/'' | relative_url %} active{% endif %}" href="{{ site.basurl }}#top">Home</a>
-      <a class="sidebar-nav-item{% if page.url == '{{ site-basurl }}#about-me' %} active {% endif %}" href="{{ site.basurl }}#about-me">About {{ page.url }}</a>
+      <a class="sidebar-nav-item{% if page.url == '{{ site-basurl }}#about-me' %} active {% endif %}" href="{{ site.basurl }}#about-me">About</a>
       <a class="sidebar-nav-item" href="{{ site.basurl }}#projects">Projects</a>
       <a class="sidebar-nav-item" href="{{ site.basurl }}#talks">Talks</a>
       <a class="sidebar-nav-item" href="{{ site.basurl }}#misc">Misc</a>
