Made link highlighting work with hacky jquery

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,11 +13,11 @@
     <nav class="sidebar-nav">
 
       {% if page.url == "/" | relative_url %}
-      <a class="sidebar-nav-item home-item{% if page.url == '/' | relative_url %} active{% endif %}" href="{{ site.basurl }}#top">Home</a>
-      <a class="sidebar-nav-item home-item{% if page.url == '/#about' | relative_url %} active{% endif %}" href="{{ site.basurl }}#about-me">About</a>
-      <a class="sidebar-nav-item home-item{% if page.url == '/#projects' | relative_url %} active{% endif %}" href="{{ site.basurl }}#projects">Projects</a>
-      <a class="sidebar-nav-item home-item{% if page.url == '/#talks' | relative_url %} active{% endif %}" href="{{ site.basurl }}#talks">Talks</a>
-      <a class="sidebar-nav-item home-item{% if page.url == '/#misc' | relative_url %} active{% endif %}" href="{{ site.basurl }}#misc">Misc</a>
+      <a id="top-link" class="sidebar-nav-item home-item{% if page.url == '/fdsfds' or page.hash == '#top' | relative_url %} active{% endif %}" href="{{ site.basurl }}#top">Home</a>
+      <a id="about-me-link" class="sidebar-nav-item home-item{% if page.hash == '#about' | relative_url %} active{% endif %}" href="{{ site.basurl }}#about-me">About</a>
+      <a id="projects-link" class="sidebar-nav-item home-item{% if page.url == '#projects' | relative_url %} active{% endif %}" href="{{ site.basurl }}#projects">Projects</a>
+      <a id="talks-link" class="sidebar-nav-item home-item{% if page.url == '#talks' | relative_url %} active{% endif %}" href="{{ site.basurl }}#talks">Talks</a>
+      <a id="misc-link" class="sidebar-nav-item home-item{% if page.url == '#misc' | relative_url %} active{% endif %}" href="{{ site.basurl }}#misc">Misc</a>
       {% else %}
       <a class="sidebar-nav-item{% if page.url == '/'' | relative_url %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
       <a class="sidebar-nav-item{% if page.type == 'about' %} active {% endif %}" href="{{ site.basurl }}/#about-me">About</a>
