Jiggled around sidebar some more

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,16 +17,14 @@
       <a id="about-me-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#about-me">About</a>
       <a id="projects-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#projects">Projects</a>
       <a id="talks-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#talks">Talks</a>
-      <a id="talks-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#teaching">Teaching</a>
-      <a id="talks-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#contact-me">Contact</a>
+      <a id="teaching-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#teaching">Teaching</a>
       <a id="misc-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#misc">Misc</a>
       {% else %}
       <a id="top-link" class="sidebar-nav-item" href="{{ '/' | relative_url }}">Home</a>
       <a id="about-me-link" class="sidebar-nav-item" href="{{ site.basurl }}/#about-me">About</a>
       <a id="projects-link" class="sidebar-nav-item" href="{{ site.basurl }}/#projects">Projects</a>
       <a id="talks-link" class="sidebar-nav-item" href="{{ site.basurl }}/#talks">Talks</a>
-      <a id="talks-link" class="sidebar-nav-item" href="{{ site.basurl }}/#teaching">Teaching</a>
-      <a id="talks-link" class="sidebar-nav-item" href="{{ site.basurl }}/#contact-me">Contact</a>
+      <a id="teaching-link" class="sidebar-nav-item" href="{{ site.basurl }}/#teaching">Teaching</a>
       <a id="misc-link" class="sidebar-nav-item" href="{{ site.basurl }}/#misc">Misc</a>
       {% endif %}
 
