Changed colours again

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -173,8 +173,8 @@ pre {
 code {
   padding: .25em .5em;
   font-size: 85%;
-  color: #fff;
-  background-color: #000000;
+  color: #f8f8f2;
+  background-color: #44475a;
   border-radius: 3px;
 }
 
@@ -189,7 +189,7 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #000000;
+  background-color: #44475a;
 }
 
 pre code {
