--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -59,7 +59,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255, 255, 255, .5);
-  background-color: #44475a;
+  background-color: #383a59;
 }
 
 @media (min-width: 48em) {
