--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,9 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+  font-family: 'Source Code Pro', monospace;
   font-size: 16px;
   line-height: 1.5;
   background-color: #282A36
