--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include sidebar.html %}
+  {% include sidebar.html %}
 
-    <div id="top" class="content container">
-      {{ content }}
-    </div>
+  <div id="top" class="content container">
+    {{ content }}
+  </div>
 
-    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src = "/js/scripts.js"></script>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="/js/scripts.js"></script>
 
-  </body>
+</body>
+
 </html>
