--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -98,6 +98,7 @@ h6 {
   text-rendering: optimizeLegibility;
 }
 
+
 h1 {
   font-size: 2rem;
 }
@@ -311,6 +312,7 @@ tbody tr:nth-child(even) td {
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
+  text-align: center;
 }
 
 
