--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -283,23 +283,22 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #bcc0c6;
+  border: 1px solid #d6d3cd;
   border-collapse: collapse;
 }
 
 td {
   padding: .25rem .5rem;
-  border: 1px solid #bcc0c6;
+  border: 1px solid #d6d3cd;
 }
 
 th {
   padding: .25rem .5rem;
-  background-color: #919191;
-  color: white;
+  background-color: #ffffff80;
 }
 
 tbody tr:nth-child(even) td {
-  background-color: #ecebeb;
+  background-color: #383a59;
 }
 
 
