--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -283,18 +283,18 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #d6d3cd;
+  border: 0px solid rgba(255, 255, 255, .5);
   border-collapse: collapse;
 }
 
 td {
   padding: .25rem .5rem;
-  border: 1px solid #d6d3cd;
+  border: 0px solid #d6d3cd;
 }
 
 th {
   padding: .25rem .5rem;
-  background-color: #ffffff80;
+  background-color: #6272a4;
 }
 
 tbody tr:nth-child(even) td {
