--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -70,7 +70,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #8be9fd;
   text-decoration: none;
 }
 
