--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a id="top-link" class="sidebar-nav-item home-item" href="{{ site.basurl }}#top">Home</a>
+      <a id="top-link" class="sidebar-nav-item home-item" href="/">Home</a>
       <a id="blog-link" class="sidebar-nav-item" href="{{ site.basurl }}/blog">Blog</a>
       <a id="git-link" class="sidebar-nav-item" href="{{ site.github }}">GitHub</a>
       <span class="sidebar-nav-item">Running <a href="http://hyde.getpoole.com/">Hyde</a>, a Jekyll theme</span>
