Added a meta description tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
     {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
+  <meta name="description"
+    content="Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of Dan Ghica and Miriam Backens!">
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/public/css/poole.css" | relative_url }}">
