Moved the description into the config file

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,7 @@
     {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
-  <meta name="description"
-    content="Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of Dan Ghica and Miriam Backens!">
+  <meta name="description" content="{{ site.meta }}">
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/public/css/poole.css" | relative_url }}">
