Added latest version of circuit visualiser

--- a/pages/circuits/styles.css
+++ b/pages/circuits/styles.css
@@ -136,3 +136,11 @@ g g polygon {
 .centre {
     text-align: center;
 }
+
+.dotbox {
+    width: 95%;
+    height: 95%;
+    resize: none;
+    margin: 10px;
+    border: none;
+}
