Making a top bar version of the site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+{% include nav.html %}
+
+<div class="spacer">
+  &nbsp;
+</div>
+
 {% include head.html %}
 
 <body>
 
-  {% include sidebar.html %}
 
-  <div id="top" class="content container">
+  {% include header.html %}
+
+  <div id="text" class="content container">
     {{ content }}
   </div>
 
