--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -1,8 +1,8 @@
 ---
 layout: default
+title: page.title
 ---
 
 <div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
