--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,11 @@
     <div class="top-bar">
       <img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
       <span class="title"><a href="{{ "/" | relative_url }}">
+          {% if page.url == "/" | relative_url %}
           {{ site.title }}
+          {% else %}
+          {{ page.title }}
+          {% endif %}
         </a></span>
     </div>
 
