--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -117,6 +117,16 @@ h3 {
   font-size: 1.5rem;
 }
 
+h2::before {
+  display: block;
+  content: " ";
+  margin-top: -85px;
+  height: 85px;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+
 h4,
 h5,
 h6 {
@@ -534,4 +544,9 @@ a.pagination-item:hover {
   border-radius: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.top-link {
+  text-align: center;
+  font-weight: bold;
 }
