Both image and name are links now

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,6 @@
         </a></span>
     </div>
 
-    <div class="tagline">{{ site.description }}</div>
+    <div class="tagline">{{ page.tagline }}</div>
   </div>
 </div>
