--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,11 @@
 <div class="nav-bar">
   <div class="left-nav">
-    <img class="nav-site-image" src="{{ site.author.avatar }}" alt="me">
-    <div class="small-title"><a href={{ "/" | relative_url }}>George Kaye</a></div>
+    <a href={{ "/" | relative_url }}>
+      <div class="site-name">
+        <div><img class="nav-site-image" src="{{ site.author.avatar }}" alt="me"></div>
+        <div class="small-title">George Kaye</div>
+      </div>
+    </a>
   </div>
   <div class="middle-nav">
     <div class="small-page-title">
@@ -15,5 +19,6 @@
   </div>
   <div class="right-nav">
     <div class="nav-link"><a href="https://github.com/georgejkaye">GitHub</a></div>
+    <div class="nav-link"><a href="/blog">Blog</a></div>
   </div>
 </div>
