--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -141,7 +141,7 @@ a.sidebar-nav-item:focus {
 
 .title-bar {
   width: 100%;
-  height: 250px;
+  height: 230px;
   z-index: 999;
   text-align: center;
   padding: 2rem 1rem;
@@ -165,7 +165,7 @@ a.sidebar-nav-item:focus {
 
 .tagline {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 .site-image {
@@ -188,6 +188,18 @@ a.sidebar-nav-item:focus {
   display: flex;
   align-items: center;
   margin-left: 10px;
+  margin-top: 10px;
+}
+
+.site-name {
+  flex: 1;
+  display: flex;
+}
+
+@media (max-width: 48em) {
+  .middle-nav {
+    display: none;
+  }
 }
 
 .middle-nav {
@@ -197,7 +209,7 @@ a.sidebar-nav-item:focus {
   justify-content: center;
 }
 
-.small-title a {
+.small-title {
   font-size: 22pt;
   font-weight: bold;
   color: #50fa7b;
@@ -227,6 +239,7 @@ a.sidebar-nav-item:focus {
   flex-direction: row-reverse;
   align-items: center;
   margin-right: 5px;
+  font-weight: bold;
 }
 
 .nav-link {
@@ -242,7 +255,7 @@ a.sidebar-nav-item:focus {
 
 .content {
   margin: auto;
-  padding-top: 4rem;
+  padding-top: 2rem;
   padding-bottom: 4rem;
 }
 
