--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -420,6 +420,7 @@ tbody tr:nth-child(even) td {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  text-align: center;
 }
 
 /* Related posts */
