--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -35,13 +35,13 @@ html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 
-@media (min-width: 48em) {
+/*@media (max-width: 48em) {
   html {
     font-size: 16px;
   }
-}
+}*/
 
-@media (min-width: 58em) {
+@media (min-width: 48em) {
   html {
     font-size: 20px;
   }
@@ -131,13 +131,15 @@ a.sidebar-nav-item:focus {
 
 /* Title bar */
 
-@media (min-width: 48em) {
+/*@media (min-width: 48em) {
   .top-sticky {
     right: 1rem;
     bottom: 1rem;
     left: 1rem;
   }
-}
+}*/
+
+
 
 .title-bar {
   width: 100%;
@@ -181,6 +183,7 @@ a.sidebar-nav-item:focus {
   height: 75px;
   width: 100%;
   border-bottom: 2px solid #282a36;
+  padding-top: 10px;
 }
 
 .left-nav {
@@ -188,12 +191,12 @@ a.sidebar-nav-item:focus {
   display: flex;
   align-items: center;
   margin-left: 10px;
-  margin-top: 10px;
 }
 
 .site-name {
   flex: 1;
   display: flex;
+  align-items: center;
 }
 
 @media (max-width: 48em) {
@@ -213,7 +216,8 @@ a.sidebar-nav-item:focus {
   font-size: 22pt;
   font-weight: bold;
   color: #50fa7b;
-  margin: 10px;
+  line-height: 1;
+  text-align: center;
 }
 
 .small-page-title a {
@@ -233,6 +237,12 @@ a.sidebar-nav-item:focus {
   margin-right: 10px;
 }
 
+@media (max-width: 52em) {
+  .small-title {
+    display: none;
+  }
+}
+
 .right-nav {
   display: flex;
   flex: 1;
@@ -241,6 +251,13 @@ a.sidebar-nav-item:focus {
   margin-right: 5px;
   font-weight: bold;
 }
+
+@media (max-width: 52em) {
+  .nav-link {
+    display: none;
+  }
+}
+
 
 .nav-link {
   margin-left: 10px;
@@ -259,15 +276,7 @@ a.sidebar-nav-item:focus {
   padding-bottom: 4rem;
 }
 
-@media (min-width: 48em) {
-  .content {
-    max-width: 32rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-}
-
-@media (min-width: 64em) {
+@media (min-width: 32em) {
   .content {
     max-width: 36em;
     margin-left: auto;
