--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,9 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
 
-  <p><img class = "post-img" src = {{ page.image }} alt= {{ page.alttext }}></p>
+  <p><img class="post-img" src={{ page.image }} alt={{ page.alttext }}></p>
 
   {{ content }}
 </div>
@@ -15,14 +14,14 @@ layout: default
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
+    <li>
+      <h3>
+        <a href="{{ post.url }}">
+          {{ post.title }} <br>
+          <small>{{ post.date | date_to_string }}</small>
+        </a>
+      </h3>
+    </li>
     {% endfor %}
   </ul>
 </div>
