--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <div class="title-bar">
-  <div class="container top-sticky">
-    <div class="top-bar">
+  <div class="top-bar">
+    <div class="top-bar-item">
       <img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
-      <span class="title">
-        {% if page.url == "/" | relative_url %}
-        {{ site.title }}
-        {% else %}
-        {{ page.title }}
-        {% endif %}
-      </span>
     </div>
-
-    <div class="tagline">{{ page.tagline }}</div>
+    <div class="top-bar-item title">
+      {% if page.url == "/" | relative_url %}
+      {{ site.title }}
+      {% else %}
+      {{ page.title }}
+      {% endif %}
+    </div>
   </div>
+
+  <div class="tagline">{{ page.tagline }}</div>
 </div>
