Updated how things change position on resize

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <div class="title-bar">
+  <div class="mobile-image-bar">
+    <img class="mobile-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
+  </div>
   <div class="top-bar">
     <div class="top-bar-item">
       <img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
